--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -12,52 +12,32 @@ Tags:
 */
 /*/
 /////////////////////   Global /////////////////*/
-$primary: #113f9c;
+
+@font-face {
+  font-family: Apercu;
+  src: url(fonts/Helvetica.ttf)
+}
+
+$primary: #1177bd;
 $footer: #191f23;
 $black: #232323;
 $mm: #30679a;
 $vw: 0.0732064vw;
 
 body {
-  // font-family: 'Lato', sans-serif;
-  // font-family: 'Poppins', sans-serif;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Helvetica",Georgia,"Times New Roman",Times,serif;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
-.hero {
-  position: relative;
-  background-image: url("images/bg3.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  // background-attachment: fixed;
-}
-
-// a:-webkit-any-link {
-//   cursor: none !important;
-// }
-// a:hover,
-// a:focus,
-// a:active {
-//   cursor: none !important;
-// }
-// .overlay {
-//   // background-image: url(images/overlay.png);
-//   z-index: 2;
-//   background-color: rgba(0, 0, 0, 0.1);
-//   border-width: 0;
-//   height: inherit;
-// }
 
 // ************ Navbar 1 *************
 // ************ Navbar 1 *************
 
 #navbar1 {
   background: #ffffffe3;
-  height: 72px;
+  height: 90px;
   z-index: 1;
   position: absolute;
   width: 100%;
@@ -67,7 +47,7 @@ body {
 
 img.logo {
   height: 100%;
-  width: 90px;
+  width: 115px;
 }
 
 .top-menu {
@@ -75,7 +55,7 @@ img.logo {
     padding-right: 4vw;
     padding-top: 3px;
     margin-bottom: 0;
-    margin-left: 8vw;
+    margin-left: 14vw;
   }
 
   li {
@@ -83,17 +63,18 @@ img.logo {
     padding: 0 18*$vw;
     transition: all 0.5s ease-out;
   }
+  a:hover{
+    text-decoration: none;
+  }
 }
 
 a.underline22 {
-  padding: 34px 0;
+  padding: 37px 0;
   display: inline;
   position: relative;
-  // font-size: 15px;
-  color: #4e4e4e;
+  color: #2c2c2c;
   text-decoration: none;
   overflow: hidden;
-  font-weight: 600;
 
   &:hover {
     color: #113f9c;
@@ -105,7 +86,7 @@ a.underline22 {
   z-index: 1;
   right: 0;
   width: 0;
-  top: 76px;
+  top: 86px;
   background: #113f9c;
   height: 3px;
   transition-property: width;
@@ -160,7 +141,7 @@ a.underline {
 }
 
 .selected {
-  color: #113f9c !important;
+  color: #1681b3 !important;
 
   &:after {
     content: "";
@@ -226,12 +207,19 @@ img.logo2 {
   }
 }
 .my-li{
-    background: #393cc6;
+    background: #67b9ea;
     color: #fff;
     border-radius: 5px;
     padding: 0.7vw 2vw 0.8vw 2vw !important;
     margin-left: 2vw;
     margin-right: -23vw;
+}
+.my-li2{
+    background: #67b9ea;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0.95vw 2vw 0.9vw 2vw !important;
+    margin-left: 2vw;
 }
 
 a.underline2 {
@@ -239,10 +227,10 @@ a.underline2 {
   display: inline;
   position: relative;
   font-size: 15px;
-  color: #080808;
+  color: #2c2c2c;
   text-decoration: none;
   overflow: hidden;
-  font-weight: 600;
+  // font-weight: 600;
 
   &:hover {
     color: #113f9c;
@@ -294,7 +282,7 @@ a.underline2 {
   background: #ffff;
   color: #5d5d5d;
   // padding: 5.9vw 6.5vw;
-  padding: 5.9vw 6.5vw 3.9vw 6.5vw;
+  padding: 14.9vw 6.5vw 3.9vw 6.5vw;
 }
 
 .blue {
@@ -306,17 +294,15 @@ a.underline2 {
 }
 // Read more
 
-.read-more {
-  color: #5d5d5d;
-  font-weight: 800;
-  // cursor: pointer;
-  display: inline-block;
-  transition: all 0.3s linear;
+// .read-more {
+//   color: $primary;
+//   display: inline-block;
+//   transition: all 0.3s linear;
 
-  &:hover {
-    transform: scale(10px);
-  }
-}
+//   &:hover {
+//     transform: scale(10px);
+//   }
+// }
 
 a.anch-read {
   text-decoration: none;
@@ -354,87 +340,57 @@ a.underline3:after {
   width: 100%;
   cursor: none;
 }
-.half{
-  // color: #e04a4a;
-  color: #0aacff;
-}
+
 // ********** Home Page *****************************************************
 
-#hero-home {
+.hero {
   height: 100vh;
+  position: relative;
+  background-image: url("images/bg3.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
-// ***** Quote ******
-
-.quote {
-  text-align: center;
+.square {
+  height: 30vh;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 40vh;
-
-  h1 {
-    opacity: 0;
-    font-size: 6.3vw;
-    font-weight: 800;
-    color: white;
-    margin-bottom: 8vh;
-  }
-
-  span {
-    color: $primary;
-  }
-
-  h4 {
-    color: #9e9e9e;
-    font-weight: 500;
-    font-size: 22.5*$vw;
-    margin-bottom: 6vh;
-  }
-}
-
-.btn-quote {
-  color: white;
-  background: $primary;
-  border: none;
-  transition: all 500ms ease;
-  font-size: 16.5*$vw;
-  font-weight: 400;
-  padding: 1vw 5vw;
-  border: 2px solid $primary;
-
-  &:hover {
-    background: transparent;
-    color: $primary;
-  }
-
-  &:focus {
-    outline: none;
-  }
+  background-image: url(images/square.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  bottom: -126px;
+  width: 100%;
 }
 
 .about-sec{
   margin-bottom: 5vw;
 
   p {
-    font-size: 1.3vw;
-    margin-bottom: 2vw;
+    font-size: 15*$vw;
+    margin-bottom: 1vw;
   }
 
   h1 {
     font-size: 3vw;
-    font-weight: 800;
-    color: #5d5d5d;
+    color: #2c2c2c;
     margin-bottom: 2vw;
-    // display: inline-block;
-    // border-bottom: 4px solid #113f9c !important;
+  }
+  h1:after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 48%;
+    bottom: 22px;
+    left: 26%;
+    background: #1177bd;
   }
 }
 .logos-com {
     width: auto;
-    height: 116px;
+    height: 80px;
 }
 .logo-polymer {
-    height: 107px;
+    height: 68px;
     margin-top: 7px;
 }
 
@@ -459,17 +415,17 @@ a.underline3:after {
   stroke: #fff;
 }
 .who-we-are{
-    background-image: url(images/preform.jpg);
-    background-size: cover;
+    background-image: url(images/polygon1.jpg);
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: 31%;
-    padding: 12vw 6.5vw;
+    padding: 20.6vw 6.5vw;
     color: #c78282;
     text-align: center;
     
     // box-shadow: 0px 1px 20px 2px #00000061;
     // background: #113f9c;
-    background-image: linear-gradient(-135deg, #3D41DA 0%, #1E1F44 100%);
+    // background-image: linear-gradient(-135deg, #3D41DA 0%, #1E1F44 100%);
   p {
     font-size: 18*$vw;
     margin-bottom: 2vw;
@@ -506,17 +462,26 @@ a.underline3:after {
     background: #ffffff3d;
 }
 .what-we-do {
-
+  padding: 6.9vw 6.5vw 2vw 6.5vw;
   p {
-    font-size: 20*$vw;
-    margin-bottom: 2vw;
+    font-size: 15*$vw;
+    margin-bottom: 1vw;
   }
 
   h1 {
     font-size: 3vw;
-    font-weight: 800;
-    color: #5d5d5d;
-    margin-bottom: 5vw;
+    color: #2c2c2c;
+    margin-bottom: 2vw;
+  }
+
+  h1:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 22%;
+    bottom: 22px;
+    left: 39%;
+    background: #1177bd;
   }
 }
 .mt-6vw{
@@ -539,20 +504,37 @@ img.partner-logo{
     // filter: grayscale(1);
 }
 .testimonials{
+  background: #ffff;
+  color: #5d5d5d;
+  padding: 0 6.5vw 3.9vw 9.5vw;
+
   h1 {
     font-size: 3vw;
-    font-weight: 800;
-    color: #5d5d5d;
-    margin-bottom: 5vw;
+    color: #2c2c2c;
+    margin-bottom: 2vw;
+  }
+
+  h1:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 34%;
+    bottom: 22px;
+    left: 33.2%;
+    background: #1177bd;
   }
 }
+.owl1{
+  margin-top: 3vw;
+}
 .owl1-item {
-  height: 29vw;
-  width: 271*$vw;
-  transition: all 0.3s ease-in-out;
-  box-shadow: -1px 18px 20px 2px rgba(0, 0, 0, 0.1);
-  margin-bottom: 5px;
   position: relative;
+  height: 26vw;
+  width: 19.8389344vw;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
 }
 .test-pic{
   width: 7.687vw !important;
@@ -560,7 +542,7 @@ img.partner-logo{
   border-radius: 50%;
   overflow: hidden;
   border: 3px solid #2354a30d !important;
-  margin-top: 4vw;
+  margin-top: 2.5vw;
   margin-bottom: 1.22vw;
 }
 .test-comment{
@@ -574,7 +556,7 @@ img.partner-logo{
   }
 }
 .test-name{
-    color: #fff;
+    color: $primary;
     font-size: 1.2vw;
     margin-top: 1vw;
     margin-bottom: 3px;
@@ -587,8 +569,6 @@ img.partner-logo{
 .test-blue {
   color: #2354a3;
   font-size: 13px;
-  border: 1px solid #2354a3;
-  background: #2354a3;
   height: 6vw;
   width: 100%;
   position: absolute;
@@ -985,7 +965,10 @@ footer {
       padding: 2vw 5vw !important;
       }
 
-  //Home Page MOBILE
+  //Home Page MOBILE ##########################################
+  .white {
+    padding: 40.9vw 6.5vw 3.9vw 6.5vw;
+  }
   #hero-home {
     height: 41vh;
   }
@@ -1036,7 +1019,7 @@ footer {
     height: 40px;
   }
   .owl1-item {
-    height: 86vw;
+    height: 28vw;
     width: 59vw;
     margin-bottom: 5px;
     box-shadow: 0px 2px 20px 2px rgba(0, 0, 0, 0.1);
