--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -42,9 +42,11 @@ body {
   position: absolute;
   width: 100%;
   box-shadow: -2px -3px 10px 0 rgba(0, 0, 0, 0.5);
-  padding: 0 12.5vw;
+  padding: 0;
 }
-
+.navbar-brand {
+  margin-left: 9.5vw;
+}
 img.logo {
   height: 100%;
   width: 115px;
@@ -55,7 +57,7 @@ img.logo {
     padding-right: 4vw;
     padding-top: 3px;
     margin-bottom: 0;
-    margin-left: 14vw;
+    margin-left: 4vw;
   }
 
   li {
@@ -288,7 +290,7 @@ a.underline2 {
 .blue {
   background: $primary;
   // padding: 4.9vw 6.5vw;
-    padding: 14.9vw 6.5vw 4.9vw 6.5vw;
+    padding: 14.9vw 7.5vw 4.9vw 7.5vw;
       // margin-top: 170px;
   color: white;
 }
@@ -344,26 +346,63 @@ a.underline3:after {
 // ********** Home Page *****************************************************
 
 .hero {
-  height: 100vh;
+  height: 585px;
   position: relative;
   background-image: url("images/bg3.jpg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
 }
+.home-about {
+  background: #ffff;
+  color: #5d5d5d;
+  padding: 4.9vw 6.5vw 2vw 6.5vw;
+}
+.mass-production {
+  height: 41.2vw;
+  background-image: url(images/massproduct.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+}
 .square {
-  height: 30vh;
-  position: absolute;
+  height: 17vw;
+  position: relative;
   background-image: url(images/square.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-  bottom: -126px;
+  bottom: 3.661vw;
   width: 100%;
+}
+// .hexagon {
+.hexagon{
+  margin-top: 1vw;
+  margin-bottom: 5vw;
+
+  h1 {
+    font-size: 3vw;
+    color: #383a3c;
+    // color: #2c2c2c;
+    margin-bottom: 2vw;
+  }
+  h1:after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 87%;
+    bottom: 22px;
+    left: 7%;
+    background: #1177bd;
+  }
+}
+img.hexagon_mob {
+  width: 66%;
+  margin-top: 3.3vw;
 }
 
 .about-sec{
-  margin-bottom: 5vw;
+  // margin-bottom: 5vw;
 
   p {
     font-size: 15*$vw;
@@ -372,7 +411,8 @@ a.underline3:after {
 
   h1 {
     font-size: 3vw;
-    color: #2c2c2c;
+    color: #383a3c;
+    // color: #2c2c2c;
     margin-bottom: 2vw;
   }
   h1:after{
@@ -385,84 +425,27 @@ a.underline3:after {
     background: #1177bd;
   }
 }
-.logos-com {
-    width: auto;
-    height: 80px;
-}
-.logo-polymer {
-    height: 68px;
-    margin-top: 7px;
-}
 
-.bottomRightRounded {
-  position: absolute;
-  z-index: 9;
-  transform: rotate(180deg);
-  margin-top: -1px;
-}
-.bottomRightRounded path {
-  fill: #fff;
-  stroke: #fff;
-}
-.topLeftRounded {
-  position: absolute;
-  margin-top: -100px;
-  z-index: 9;
-  left: 0;
-}
-.topLeftRounded path {
-  fill: #fff;
-  stroke: #fff;
-}
-.who-we-are{
-    background-image: url(images/polygon1.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 31%;
-    padding: 20.6vw 6.5vw;
-    color: #c78282;
-    text-align: center;
-    
-    // box-shadow: 0px 1px 20px 2px #00000061;
-    // background: #113f9c;
-    // background-image: linear-gradient(-135deg, #3D41DA 0%, #1E1F44 100%);
-  p {
-    font-size: 18*$vw;
-    margin-bottom: 2vw;
-    color: #fff;
-    padding: 25px 24vw;
-  }
 
-  h1 {
-    font-size: 48*$vw;
-    font-weight: 800;
-    color: #fff;
-  }
-}
+
 .wrap-product{
   padding: 0 8.5vw;
 }
-.col-3_5 {
-  -ms-flex: 0 0 30.5%;
-  flex: 0 0 30.5%;
-  max-width: 30.5%;
-}
-.dark-product{
-      // box-shadow: 0px 1px 20px 2px #706f6f61;
-      // background: #2bb2887a;
-      /* border: 1px dashed white; */
-    font-size: 1.3vw;
-    font-weight: 500;
-    border-radius: 5px;
-    padding: 1.8vw;
-    transition: all 0.7s;
-    text-align: center;
-    height: 193px;
-    color: #d4d4d4;
-    background: #ffffff3d;
-}
+
+// .dark-product{
+//     font-size: 1.3vw;
+//     font-weight: 500;
+//     border-radius: 5px;
+//     padding: 1.8vw;
+//     transition: all 0.7s;
+//     text-align: center;
+//     height: 193px;
+//     color: #d4d4d4;
+//     background: #ffffff3d;
+// }
 .what-we-do {
-  padding: 6.9vw 6.5vw 2vw 6.5vw;
+  padding: 1vw 6.5vw 2vw 6.5vw;
+
   p {
     font-size: 15*$vw;
     margin-bottom: 1vw;
@@ -485,7 +468,7 @@ a.underline3:after {
   }
 }
 .mt-6vw{
-      margin-top: 6vw !important;
+      margin-top: 2vw !important;
 }
 .partner-wrap{
   height: 150px;
@@ -524,7 +507,12 @@ img.partner-logo{
     background: #1177bd;
   }
 }
+
+.owl1 .owl-item {
+  margin-right: 48px !important;
+}
 .owl1{
+  height: 29.8vw;
   margin-top: 3vw;
 }
 .owl1-item {
