--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -13,8 +13,8 @@ Tags:
 /*/
 /////////////////////   Global /////////////////*/
 @font-face {
-  font-family: Apercu;
-  src: url(fonts/Helvetica.ttf);
+  font-family: Helvetica;
+  src: url(fonts/HelveticaNeueLTCom-LtCn.ttf);
 }
 body {
   font-family: "Helvetica", Georgia, "Times New Roman", Times, serif;
@@ -53,6 +53,7 @@ img.logo {
   display: inline;
   padding: 0 1.3177152vw;
   transition: all 0.5s ease-out;
+  font-size: 1.3909216vw;
 }
 .top-menu a:hover {
   text-decoration: none;
@@ -187,6 +188,7 @@ img.logo2 {
 .top-menu2 li {
   display: inline;
   padding: 0 1.53vw;
+  font-size: 1.3909216vw;
   transition: all 0.5s ease-out;
 }
 
@@ -298,9 +300,9 @@ a.underline3:after {
 }
 
 .hero {
-  height: 585px;
+  height: 42.825744vw;
   position: relative;
-  background-image: url("images/bg3.jpg");
+  background-image: url("images/hero_hexagon.jpg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -309,13 +311,91 @@ a.underline3:after {
 .home-about {
   background: #ffff;
   color: #5d5d5d;
-  padding: 4.9vw 6.5vw 2vw 6.5vw;
+  padding: 4.9vw 6.5vw 5vw 6.5vw;
+}
+
+.about-sec p {
+  font-size: 1.3543184vw;
+  margin-bottom: 1vw;
+}
+.about-sec h1 {
+  font-size: 3vw;
+  color: #383a3c;
+  margin-bottom: 2vw;
+}
+.about-sec h1:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 48%;
+  bottom: 22px;
+  left: 26%;
+  background: #1177bd;
+}
+.about-sec i {
+  font-size: 3vw;
+  margin-bottom: 0.6vw;
+  color: #1177bd;
+}
+
+.about-grid {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  grid-gap: 4vw;
+}
+
+div.consist_sec {
+  position: relative;
+  padding: 2vw 0 3.1vw 0;
+}
+div.consist_sec:not(:last-of-type) {
+  height: fit-content;
+}
+div.consist_sec .grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1vw;
+}
+div.consist_sec .grid-1 {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+div.consist_sec .sub-industry {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  cursor: pointer;
+}
+div.consist_sec .sub-industry span {
+  color: #1177bd;
+  color: #5d5d5d;
+  font-weight: bold;
+  padding: 0.5vw 0;
+  box-shadow: 4px 5px 11px 1px #d7d9da;
+}
+div.consist_sec .sub-industry-head p {
+  font-size: 1vw;
+  margin-bottom: 0;
+}
+div.consist_sec .sub-industry-head i.fa-video {
+  position: relative;
+  top: 0.3vw;
+  font-size: 1.7vw;
+  padding-top: 8px;
+  margin-right: 1vw;
+}
+div.consist_sec .sub-industry-head i.fa-hand-holding-usd {
+  font-size: 2.4vw;
+  margin-right: 1vw;
 }
 
 .home-about .btn-primary {
-  background-color: #67b9ea;
-  border-color: #67b9ea;
+  background-color: #1177bd;
+  border-color: #1177bd;
   padding: 4px 9px !important;
+  box-shadow: 0px 24px 20px rgba(3, 12, 35, 0.25);
+  border-radius: 0.1464128vw;
+  font-size: 1.098096vw;
 }
 
 .home-about .btn-primary.focus,
@@ -335,6 +415,8 @@ a.underline3:after {
 }
 
 .about-head {
+  width: -webkit-min-content;
+  width: -moz-min-content;
   width: min-content;
   border-bottom: 3px solid #1177bd;
   padding: 2px 0.8vw;
@@ -355,12 +437,12 @@ a.underline3:after {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-  bottom: 3.661vw;
+  bottom: 5.661vw;
   width: 100%;
 }
 
 .hexagon {
-  margin-top: 1vw;
+  margin-top: -1vw;
   margin-bottom: 5vw;
 }
 .hexagon h1 {
@@ -381,25 +463,6 @@ a.underline3:after {
 img.hexagon_mob {
   width: 66%;
   margin-top: 3.3vw;
-}
-
-.about-sec p {
-  font-size: 1.098096vw;
-  margin-bottom: 1vw;
-}
-.about-sec h1 {
-  font-size: 3vw;
-  color: #383a3c;
-  margin-bottom: 2vw;
-}
-.about-sec h1:after {
-  content: "";
-  position: absolute;
-  height: 3px;
-  width: 48%;
-  bottom: 22px;
-  left: 26%;
-  background: #1177bd;
 }
 
 .wrap-product {
@@ -803,19 +866,11 @@ footer {
     margin-right: -19px;
     margin-left: -24px;
     margin-top: -8px;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 
   .navbar-toggler svg path {
     fill: none;
-    -webkit-transition: stroke-dashoffset 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25), stroke-dasharray 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25);
-    -moz-transition: stroke-dashoffset 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25), stroke-dasharray 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25);
-    -o-transition: stroke-dashoffset 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25), stroke-dasharray 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25);
-    -ms-transition: stroke-dashoffset 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25), stroke-dasharray 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25);
     transition: stroke-dashoffset 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25), stroke-dasharray 0.5s cubic-bezier(0.25, -0.25, 0.75, 1.25);
     stroke-width: 30px;
     stroke-linecap: round;
@@ -1191,6 +1246,7 @@ a img.aligncenter {
 .screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
   clip-path: inset(50%);
   height: 1px;
   margin: -1px;
@@ -1205,6 +1261,7 @@ a img.aligncenter {
 .screen-reader-text:focus {
   background-color: #eee;
   clip: auto !important;
+  -webkit-clip-path: none;
   clip-path: none;
   color: #444;
   display: block;
